--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
         </div>
       </div>
     </div>
+    <div>
+      <p>
+        <a
+          href="https://github.com/FahimehRahimnejad/weatherapp"
+          target="_blank"
+        >
+          open-source code</a
+        >
+        by Fahimeh Rahimnejad
+      </p>
+    </div>
     <script src="weatherapp.js"></script>
   </body>
 </html>
