--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         </ul>
         <div class="row">
           <div class="col-6">
+            <img src="#" />
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="units">°C</span>
+                ><span class="units">°C | °F</span>
               </div>
             </div>
           </div>
