--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <div class="row">
             <div class="col-6">
               <img src="#" />
-              <div class="clearfix">
-                <div class="float-left">
+              <div class="d-flex">
+                <div>
                   <span class="temperature" id="temperature"></span
                   ><span class="units">°C | °F</span>
                 </div>
