--- a/index.html
+++ b/index.html
@@ -19,47 +19,51 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <form class="search-form" id="search-form">
-            <div class="row">
-              <div class="col-6">
-                <input
-                  type="search"
-                  placeholder="Type a city.."
-                  autofocus="on"
-                  autocomplete="off"
-                  id="city-input"
-                  class="form-control shadow-sm"
-                />
+          <div class="overview">
+            <form class="search-form" id="search-form">
+              <div class="row">
+                <div class="col-6">
+                  <input
+                    type="search"
+                    placeholder="Type a city.."
+                    autofocus="on"
+                    autocomplete="off"
+                    id="city-input"
+                    class="form-control shadow-sm"
+                  />
+                </div>
+                <div class="col-3">
+                  <input
+                    type="submit"
+                    value="Search"
+                    class="form-control btn btn-primary shadow-sm w-100"
+                  />
+                </div>
+                <div class="col-3">
+                  <button
+                    class="btn btn-success w-100"
+                    id="current-location-button"
+                  >
+                    Current
+                  </button>
+                </div>
               </div>
-              <div class="col-3">
-                <input
-                  type="submit"
-                  value="Search"
-                  class="form-control btn btn-primary shadow-sm w-100"
-                />
-              </div>
-              <div class="col-3">
-                <button
-                  class="btn btn-success w-100"
-                  id="current-location-button"
-                >
-                  Current
-                </button>
-              </div>
-            </div>
-          </form>
-          <h1 id="city"></h1>
-          <ul>
-            <li id="date"></li>
-            <li id="description"></li>
-          </ul>
+            </form>
+            <h1 id="city"></h1>
+            <ul>
+              <li id="date"></li>
+              <li id="description"></li>
+            </ul>
+          </div>
           <div class="row">
             <div class="col-6">
-              <img src="#" />
-              <div class="d-flex">
+              <div class="d-flex weather-temperature">
+                <img src="#" alt="clear" id="icon" />
                 <div>
-                  <span class="temperature" id="temperature"></span
-                  ><span class="units">°C | °F</span>
+                  <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#">°C</a> | <a href="#">°F</a></span
+                  >
                 </div>
               </div>
             </div>
