--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="row">
             <div class="col-6">
               <div class="d-flex weather-temperature">
-                <img src="#" alt="clear" id="icon" />
+                <img src="" alt="clear sky" id="icon" />
                 <div>
                   <strong id="temperature"></strong
                   ><span class="units"
