--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="container">
-      <div class="weather-app-wrapper" id="app-wrapper">
+      <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
             <form class="search-form" id="search-form">
